metadata "Include Labels" checkbox doesn't work when "Use Strip Metadata" is checked #67732

Closed
opened 2019-07-26 14:09:06 +02:00 by dono dono · 33 comments

System Information
Operating system: Windows 7
Graphics card: NVIDIA Gtx780

Blender Version
Broken: 2.8 RC3

Short description of error
Metadata "Include Labels" checkbox doesn't work well when "Use Strip Metadata" is checked.

Exact steps for others to reproduce the error
Open blender. In Metadatas settings, check "Burn to image". Check "Use Strip Metadata". Uncheck "Include Labels". Do a render. Labels are visible.
Thank you!
metadatas.jpg
metadatas.blend

Edit: I shoudn't enable "use strip metadata" if there is not a strip in the sequencer, but blender shoudn't override "include labels" if the user does, no ? Thank you very much.

Edit2: When you add an image in the sequencer that has metadata inside, when you enable "use strip metadata", blender doesn't use these infos. (you can check they exist in UV Image Editor with "show metadata" enabled)

**System Information** Operating system: Windows 7 Graphics card: NVIDIA Gtx780 **Blender Version** Broken: 2.8 RC3 **Short description of error** Metadata "Include Labels" checkbox doesn't work well when "Use Strip Metadata" is checked. **Exact steps for others to reproduce the error** Open blender. In Metadatas settings, check "Burn to image". Check "Use Strip Metadata". Uncheck "Include Labels". Do a render. Labels are visible. Thank you! ![metadatas.jpg](https://archive.blender.org/developer/F7629757/metadatas.jpg) [metadatas.blend](https://archive.blender.org/developer/F7629761/metadatas.blend) Edit: I shoudn't enable "use strip metadata" if there is not a strip in the sequencer, but blender shoudn't override "include labels" if the user does, no ? Thank you very much. Edit2: When you add an image in the sequencer that has metadata inside, when you enable "use strip metadata", blender doesn't use these infos. (you can check they exist in UV Image Editor with "show metadata" enabled)
Author

Added subscriber: @ParrotDenis

Added subscriber: @ParrotDenis

Added subscriber: @dark999

Added subscriber: @dark999

maybe Burn Into Image work as expected? it add metadata over image.
if you want include metadata on image but not overprinted on it, you must uncheck Burn Into Image and activate in render viewer View > Show Metadata

maybe Burn Into Image work as expected? it add metadata over image. if you want include metadata on image but not overprinted on it, you must uncheck Burn Into Image and activate in render viewer View > Show Metadata

Added subscriber: @zeauro

Added subscriber: @zeauro

I confirm issue on ubuntu 64bits with master 62338abde4
Labels are always included.

I confirm issue on ubuntu 64bits with master 62338abde433 Labels are always included.

IMO this is a designed feature not bug, i can confirm that work as expected IMHO

@zeauro you read what i wrote? it work as i explain or metadata still overprinted?

IMO this is a designed feature not bug, i can confirm that work as expected IMHO @zeauro you read what i wrote? it work as i explain or metadata still overprinted?
Author

metadatas2.jpg

![metadatas2.jpg](https://archive.blender.org/developer/F7629954/metadatas2.jpg)

Screenshot_20190726_170002.png as i already tell

![Screenshot_20190726_170002.png](https://archive.blender.org/developer/F7629968/Screenshot_20190726_170002.png) as i already tell

Added subscriber: @Cremuss22

Added subscriber: @Cremuss22

@dark999 : You don't seem to understand the issue here, I think. He wants to burn into the image. The issue here is the behavior of "Include Labels" which should alter how things are burnt into the image. With "Include Labels" ON, you expect strings like "Camera Camera.001", "Scene Scene". However with "Include Labels" OFF, it should skip the 'label' part and just burn "Camera.001", "Scene" and so on.

@dark999 : You don't seem to understand the issue here, I think. He wants to burn into the image. The issue here is the behavior of "Include Labels" which should alter how things are burnt into the image. With "Include Labels" ON, you expect strings like "Camera Camera.001", "Scene Scene". However with "Include Labels" OFF, it should skip the 'label' part and just burn "Camera.001", "Scene" and so on.

here all working as expected as already tell Screenshot_20190726_174119.png

here all working as expected as already tell ![Screenshot_20190726_174119.png](https://archive.blender.org/developer/F7629995/Screenshot_20190726_174119.png)

@dark999 please read what people are saying.

By the way I can confirm the bug on Blender 2.8 RC2 as well. It was working as expected in 2.79 as shown here

BlenderLabelsBug.jpg
Thanks

@dark999 please read what people are saying. By the way I can confirm the bug on Blender 2.8 RC2 as well. It was working as expected in 2.79 as shown here ![BlenderLabelsBug.jpg](https://archive.blender.org/developer/F7630023/BlenderLabelsBug.jpg) Thanks

@Cremuss22 in your pics right side i not see label, only metadata as expected

Screenshot_20190726_181553.png

@Cremuss22 in your pics right side i not see label, only metadata as expected ![Screenshot_20190726_181553.png](https://archive.blender.org/developer/F7630034/Screenshot_20190726_181553.png)

@dark999 not sure if you're trolling or not... but, again, please read what people write. You'd have understand this is a picture from 2.79 showing the expected and working behavior. This is bugged in 2.8. Thank you

@dark999 not sure if you're trolling or not... but, again, please read what people write. You'd have understand this is a picture from 2.79 showing the expected and working behavior. This is bugged in 2.8. Thank you

@Cremuss22 in my blender RC3 i have same result as your picture of 2.79, you troll me? check my screecap

@Cremuss22 in my blender RC3 i have same result as your picture of 2.79, you troll me? check my screecap

@dark999 yes but as stated in the bug description, the issue appears if you toggle on "Use Strip Metadata" which bugs the behavior of "Include Labels" (and it didn't in 2.79)

@dark999 yes but as stated in the bug description, the issue appears if you toggle on "Use Strip Metadata" which bugs the behavior of "Include Labels" (and it didn't in 2.79)

Added subscriber: @ChristopherAnderssarian

Added subscriber: @ChristopherAnderssarian

@dark999 It could be this doesn't affect Linux...

I can confirm the issue on windows with 2.80RC3.

@dark999 ~~It could be this doesn't affect Linux...~~ I can confirm the issue on windows with 2.80RC3.
dono dono changed title from metadata "Include Labels" checkbox doesn't work to metadata "Include Labels" checkbox doesn't work well when "Use Strip Metada" is checked 2019-07-26 18:37:10 +02:00
dono dono changed title from metadata "Include Labels" checkbox doesn't work well when "Use Strip Metada" is checked to metadata "Include Labels" checkbox doesn't work when "Use Strip Metada" is checked 2019-07-26 18:37:25 +02:00
dono dono changed title from metadata "Include Labels" checkbox doesn't work when "Use Strip Metada" is checked to metadata "Include Labels" checkbox doesn't work when "Use Strip Metadata" is checked 2019-07-26 18:38:44 +02:00

Added subscriber: @rjg

Added subscriber: @rjg

This comment was removed by @rjg

*This comment was removed by @rjg*

This comment was removed by @rjg

*This comment was removed by @rjg*

what are Strip Metadata in this case?
please, follow this step
disable Use strip metadata,
disable Burn Into Image,
disable Include Labels,
render image,
in Blender Render window or Image Editor we can see an cristal clear render image,
enable View > Show Metadata
two black rectangles are shown above and below the rendered image with text inside, all text you see are Strip Metadata. For example for camera, Strip Metadata stored inside image is Camera: Camera . YES Label: plus metadata

Strip Metadata include labels

if you want overprint Strip Metadata in renderd image Labels are part of Strip Metadata

i hope all this is comprensible and clear, Blender 2.80RC3 work same as 2.79b, same results with same setting

PEACE

what are Strip Metadata in this case? please, follow this step disable Use strip metadata, disable Burn Into Image, disable Include Labels, render image, in Blender Render window or Image Editor we can see an cristal clear render image, enable View > Show Metadata two black rectangles are shown above and below the rendered image with text inside, all text you see are **Strip Metadata**. For example for camera, Strip Metadata stored inside image is **Camera: Camera** . YES **Label:** plus **metadata** **Strip Metadata *include* labels** if you want overprint Strip Metadata in renderd image Labels are part of Strip Metadata i hope all this is comprensible and clear, Blender 2.80RC3 work same as 2.79b, same results with same setting PEACE

Removed subscriber: @rjg

Removed subscriber: @rjg

My mistake, I thought the behavior was different in 2.79 but I mistook Strip Metadata setting with Seq. Strip :(

Still, I understand the label is part of the metadata and thus showing when using Strip Metadata but then it just seems to be conflicting with "Include Labels".

I'd suggest maybe graying out "Include Labels" if "Strip Metadata" is toggled on because it can be confusing, or mentionning this behavior in "Strip Metadata" tooltip :)
Thanks for the help.

My mistake, I thought the behavior was different in 2.79 but I mistook Strip Metadata setting with Seq. Strip :( Still, I understand the label is part of the metadata and thus showing when using Strip Metadata but then it just seems to be conflicting with "Include Labels". I'd suggest maybe graying out "Include Labels" if "Strip Metadata" is toggled on because it can be confusing, or mentionning this behavior in "Strip Metadata" tooltip :) Thanks for the help.
Author

Ok, I understand better now. The option "Burn into image" is not the problem.

The problem is that I shoudn't enable the "Use Strip Metadata" button if there is not a strip in the sequencer.

But if I do, blender could tell "ok, there is not a strip in the sequencer, so I don't override the "include labels" button".

Thanks for explanation.

Ok, I understand better now. The option "Burn into image" is not the problem. The problem is that I shoudn't enable the "Use Strip Metadata" button if there is not a strip in the sequencer. But if I do, blender could tell "ok, there is not a strip in the sequencer, so I don't override the "include labels" button". Thanks for explanation.

indeed, that is the real explanation here. I suspect it has something to do this patch... maybe? with https://developer.blender.org/rB175e8fdc1e2e76bd1287f1aa93db4aa4cc44d3f9

Using "Strip Metadata" let you choose per scene, in the sequencer, what metadata to show, and "Include Labels" works fine if you have multiple scenes. However, with only a single scene, "Strip Metadata" will override "Include Labels" for no reason

Screenshot showing both options working fine together when rendering from the sequencer using multiple scenes
BlenderLabelsBug_02.jpg

EDIT: @ParrotDenis found out actually that adding anythingto the sequencer resolves the bug. "Strip Metadata" on with "Include Labels" off works fine if any strip is added to the sequencer

indeed, that is the real explanation here. I suspect it has something to do this patch... maybe? with https://developer.blender.org/rB175e8fdc1e2e76bd1287f1aa93db4aa4cc44d3f9 Using "Strip Metadata" let you choose per scene, in the sequencer, what metadata to show, and "Include Labels" works fine if you have multiple scenes. However, with only a single scene, "Strip Metadata" will override "Include Labels" for no reason Screenshot showing both options working fine together when rendering from the sequencer using multiple scenes ![BlenderLabelsBug_02.jpg](https://archive.blender.org/developer/F7630230/BlenderLabelsBug_02.jpg) **EDIT**: @ParrotDenis found out actually that adding **anything**to the sequencer resolves the bug. "Strip Metadata" on with "Include Labels" off works fine if any strip is added to the sequencer
Author

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Member

Added subscribers: @WilliamReynish, @JacquesLucke

Added subscribers: @WilliamReynish, @JacquesLucke
Member

I'm not sure what is the correct solution (because I never used this feature), but clearly there is a small UI issue here. So I confirm this. Maybe @WilliamReynish knows what is the correct solution or knows who should know.

I'm not sure what is the correct solution (because I never used this feature), but clearly there is a small UI issue here. So I confirm this. Maybe @WilliamReynish knows what is the correct solution or knows who should know.

There seems to be some sort of conflict between Use Strip Metadata and Include Labels. Unless I misunderstand, this is not so much a UI issue, but something deeper.

There seems to be some sort of conflict between Use Strip Metadata and Include Labels. Unless I misunderstand, this is not so much a UI issue, but something deeper.
Sybren A. Stüvel self-assigned this 2019-09-26 10:15:41 +02:00

This issue was referenced by ae5bf4c2c8

This issue was referenced by ae5bf4c2c83e0f4729544f7f449c641ddccfe554

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
10 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67732
No description provided.