Fix T67732: metadata "Include Labels" checkbox doesn't work when "Use Strip Metadata" is checked

The 'metadata from sequencer strip' system was using the
`stampdata_from_template()` function, which ignored the 'Use Labels'
setting.